# LeafEdit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_KR.md  file.txt  imgui.ini  justfile
src/: main.cpp
